--- a/stacks/gitea/example.env
+++ b/stacks/gitea/example.env
@@ -4,6 +4,10 @@ data=/path/to/host/storage
 # Domain settings
 domain=yourdomain.com
 
+# General settings
+uid=1000
+gid=1000
+
 # Image settings
 gitea_version=latest
 postgres_version=latest
