--- a/stacks/media/compose.yaml
+++ b/stacks/media/compose.yaml
@@ -20,6 +20,10 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
     networks:
       proxy: null
     environment:
@@ -79,6 +83,10 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
     networks:
       proxy: null
     environment:
