improve default image versions

--- a/stacks/forgejo/example.env
+++ b/stacks/forgejo/example.env
@@ -5,9 +5,9 @@ data=/path/to/host/storage
 domain=yourdomain.com
 
 # Image settings
-forgejo_version=latest
-postgres_version=latest
-runner_version=latest
+forgejo_version=13-rootless
+postgres_version=14
+runner_version=nightly
 
 # Forgejo settings
 db_pass="a_secure_db_password"
