--- a/stacks/garage/example.env
+++ b/stacks/garage/example.env
@@ -8,5 +8,5 @@ domain=yourdomain.com
 timezone=Your/Timezone
 
 # Image settings
-garage_version=latest
+garage_version=v2.1.0
 garage_webui_version=latest
