--- a/stacks/paperlessngx/example.env
+++ b/stacks/paperlessngx/example.env
@@ -12,7 +12,7 @@ timezone=Your/Timezone
 # Image settings
 keydb_version=latest
 paperlessngx_version=latest
-postgres_version=latest
+postgres_version=16
 
 # Postgres settings
 db_pass="a_secure_db_password"
