--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -15,8 +15,8 @@ timezone=Your/Timezone
 authelia_version=latest
 crowdsec_version=latest
 geoip_version=latest
-lldap_version=latest
-traefik_version=latest
+lldap_version=stable
+traefik_version=v3.6
 vector_version=latest-alpine
 
 # GeoIP filter settings
