--- a/stacks/rxresume/example.env
+++ b/stacks/rxresume/example.env
@@ -6,7 +6,7 @@ domain=yourdomain.com
 
 # Image settings
 chrome_version=latest
-postgres_version=latest
+postgres_version=16-alpine
 rxresume_version=latest
 
 # Postgres settings
