--- a/stacks/website/example.env
+++ b/stacks/website/example.env
@@ -14,7 +14,7 @@ copyparty_version=latest
 freshrss_version=latest
 homepage_version=latest
 mywebsite_version=latest
-postgres_version=latest
+postgres_version=16
 
 # Freshrss settings
 DB_PASSWORD='a_secure_db_password'
