--- a/stacks/gitea/example.env
+++ b/stacks/gitea/example.env
@@ -9,9 +9,9 @@ uid=1000
 gid=1000
 
 # Image settings
-gitea_version=latest
-postgres_version=latest
-runner_version=latest
+gitea_version=1.25-rootless
+postgres_version=14
+runner_version=nightly
 
 # Gitea settings
 db_pass="a_secure_db_password"
