--- a/stacks/immich/example.env
+++ b/stacks/immich/example.env
@@ -8,7 +8,7 @@ domain=yourdomain.com
 timezone=Your/Timezone
 
 # Image settings
-immich_version=latest
+immich_version=release
 keydb_version=latest
 
 # Postgres settings
