--- a/stacks/proxies/example.env
+++ b/stacks/proxies/example.env
@@ -5,7 +5,7 @@ data=/path/to/host/storage
 timezone=Your/Timezone
 
 # Image settings
-gluetun_version=latest
+gluetun_version=v3.40
 socks5proxy_version=latest
 tor_privoxy_version=latest
 
