--- a/stacks/docs/compose.yaml
+++ b/stacks/docs/compose.yaml
@@ -22,6 +22,10 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
     depends_on:
       - bookstack_db
     networks:
@@ -55,6 +59,10 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
     networks:
       bookstack: null
     environment:
