--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -10,7 +10,7 @@ gid=1000
 timezone=Your/Timezone
 
 # Image settings
-bookstack_version=latest
+bookstack_version=25.11.6
 grafana_version=latest
 mariadb_version=latest
 ntfy_version=latest
