--- a/stacks/docs/example.env
+++ b/stacks/docs/example.env
@@ -12,7 +12,7 @@ timezone=Your/Timezone
 # Image settings
 bookstack_version=25.11.6
 grafana_version=latest
-mariadb_version=latest
+mysql_version=9.2
 ntfy_version=latest
 prometheus_version=latest
 uptimekuma_version=2-rootless
