--- a/stacks/wg-easy/compose.yaml
+++ b/stacks/wg-easy/compose.yaml
@@ -22,6 +22,7 @@ services:
       - ALL
     cap_add:
       - NET_ADMIN
+      - NET_RAW
       - SYS_MODULE
     networks:
       proxy:
@@ -34,7 +35,7 @@ services:
     ports:
       - 51820:51820/udp
     environment:
-      INSECURE: true
+      INSECURE: false
     volumes:
       - ${data:-.}/wg-easy:/etc/wireguard
       - /lib/modules:/lib/modules:ro
