--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -106,6 +106,6 @@ services:
     labels:
       traefik.enable: "true"
       traefik.http.routers.rxresume.entrypoints: "https"
-      traefik.http.routers.rxresume.middlewares: "allowedIPs@file"
+      traefik.http.routers.rxresume.middlewares: "allowedIPs@file,authelia@file"
       traefik.http.routers.rxresume.rule: "Host(`rx.${domain}`)"
       traefik.http.services.rxresume.loadbalancer.server.url: 'http://rxresume:3000'
