--- a/stacks/media/compose.yaml
+++ b/stacks/media/compose.yaml
@@ -74,7 +74,7 @@ services:
       traefik.enable: "true"
       traefik.http.routers.jellyseerr.entryPoints: "https"
       traefik.http.routers.jellyseerr.middlewares: "allowedIPs@file,authelia@file"
-      traefik.http.routers.jellyseerr.rule: "Host(`seer.${domain}`)"
+      traefik.http.routers.jellyseerr.rule: "Host(`js.${domain}`)"
       traefik.http.services.jellyseerr.loadbalancer.server.url: "http://jellyseerr:5055"
   calibre:
     <<: *common-settings
